# polars_pandas

./: Cargo.toml  README.md  pyproject.toml
src/: main.rs  pandas_aggregation.py  polars_aggregation.py
