[tool.poetry]
name = "polars_pandas"
version = "0.1.0"
description = "Polars and pandas simple benchmark"
authors = ["Carlos Avellaneda Suarez <carlos.avellaneda@mercadolibre.com.co>"]

[tool.poetry.dependencies]
python = "^3.8"
polars = "^0.15.2"
pandas = "^1.5.2"
fastparquet = "^2022.12.0"
pyarrow = "^10.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
